--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body {
   margin: 0;
 }
 
+#container {
+  margin-bottom: 20px;
+}
+
 h1 {
   font-size: 2.2em;
   line-height: 1.1;
@@ -25,3 +29,22 @@ h1 {
   fill: none;
 }
 
+#tooltip {
+  position: absolute;
+  background-color: rgba(46, 156, 151, 0.836);
+  padding: 10px;
+  box-sizing: border-box;
+  border-radius: 5px;
+  color: white;
+  opacity: 0;
+  pointer-events: none;
+  font-size: 13px;
+}
+
+
+
+#source {
+  position: absolute;
+  bottom: 0;
+  right: 10px;
+}
